# nfalm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.huggingface  README-ZH.MD  README.MD  README.md  README_zh.md  RELEASE_NOTES.md  TODO.md  build.rs  load_test.sh  out.json  release.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml  dev-build.yml  docker-build.yml  my-manual-build.yml  release-build.yml
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  AuthGatekeeper.tsx  AuthTokenForm.tsx  ConfigTab.tsx  CookieSubmitForm.tsx  CookieTabs.tsx  CookieVisualization.tsx  LanguageSelector.tsx  SubmitCookieForm.tsx  api.ts  i18n.ts  index.css  main.tsx  submit.tsx
frontend/src/api/: index.ts  keyApi.ts  vertexApi.ts
frontend/src/components/auth/: AuthGatekeeper.tsx  LogoutPanel.tsx
frontend/src/components/claude/: CookieSection.tsx  CookieValue.tsx  CookieVisualization.tsx  DeleteButton.tsx  index.tsx
frontend/src/components/common/: Button.tsx  Card.tsx  ErrorBoundary.tsx  FormInput.tsx  LoadingSpinner.tsx  StatusMessage.tsx  TabNavigation.tsx  ToastProvider.tsx
frontend/src/components/config/: ConfigCheckbox.tsx  ConfigForm.tsx  ConfigSection.tsx  StorageSummary.tsx  index.tsx
frontend/src/components/cookie/: CookieSection.tsx  CookieSubmitForm.tsx  CookieVisualization.tsx  index.tsx
frontend/src/components/gemini/: AiStudioTabs.tsx  DeleteButton.tsx  KeySubmitForm.tsx  KeyValue.tsx  KeyVisualization.tsx  index.tsx
frontend/src/components/gemini/vertex/: VertexCredentialList.tsx  VertexCredentialUpload.tsx  VertexTabs.tsx
frontend/src/components/keys/: DeleteButton.tsx  KeySubmitForm.tsx  KeyValue.tsx  KeyVisualization.tsx  index.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  LanguageSelector.tsx  MainLayout.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useAuth.ts  useConfig.ts  useCookieStatus.ts  useForm.ts
frontend/src/locales/en/: translation.json
frontend/src/locales/zh/: translation.json
frontend/src/services/: configService.ts  cookieService.ts
frontend/src/types/: api.types.ts  auth.types.ts  config.types.ts  cookie.types.ts  key.types.ts  ui.types.ts  vertex.types.ts
frontend/src/utils/: formatters.ts
src/: bootstrap.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
src/api/: body.rs  claude.rs  claude_code.rs  claude_web.rs  config.rs  error.rs  gemini.rs  messages.rs  misc.rs  mod.rs  storage.rs
src/api/openai/: completion.rs  mod.rs  stream.rs
src/body/: mod.rs  request.rs  response.rs
src/claude_body/: request.rs  response.rs
src/claude_code_state/: chat.rs  exchange.rs  mod.rs  organization.rs
src/claude_state/: bootstrap.rs  chat.rs  mod.rs
src/claude_web_body/: mod.rs  request.rs  response.rs
src/claude_web_state/: bootstrap.rs  chat.rs  mod.rs  transform.rs
src/config/: clewdr_config.rs  constants.rs  cookie.rs  key.rs  mod.rs  reason.rs  token.rs
src/context/: bootstrap.rs  chat.rs  mod.rs
src/gemini_body/: mod.rs
src/gemini_state/: mod.rs
src/lib/: api.rs  bootstrap.rs  client.rs  completion.rs  config.rs  cookie.rs  cookie_manager.rs  error.rs  lib.rs  messages.rs  router.rs  state.rs  stream.rs  submit.rs  superfetch.rs  text.rs  update.rs  utils.rs
src/lib/api/: body.rs  config.rs  messages.rs  misc.rs  mod.rs
src/lib/api/openai/: completion.rs  stream.rs
src/lib/openai/: completion.rs  stream.rs
src/lib/types/: LICENSE.txt  message.rs
src/middleware/: auth.rs  mod.rs  request.rs  response.rs  stop_sequences.rs  unify.rs
src/middleware/claude/: claude2oai.rs  mod.rs  request.rs  response.rs  stop_sequences.rs
src/middleware/gemini/: mod.rs  path.rs  request.rs
src/persistence/: mod.rs
src/persistence/db/: conn.rs  entities.rs  metrics.rs  mod.rs  repo.rs
src/providers/: mod.rs
src/providers/claude/: mod.rs
src/providers/gemini/: mod.rs
src/services/: cache.rs  cookie_actor.rs  cookie_manager.rs  key_actor.rs  key_manager.rs  mod.rs  sync.rs  update.rs
src/state/: bootstrap.rs  chat.rs  mod.rs
src/types/: LICENSE.txt  claude.rs  claude_message.rs  message.rs  mod.rs  oai.rs
src/types/claude_web/: request.rs  response.rs
src/types/gemini/: request.rs  response.rs
src/utils/: mod.rs  stream.rs  text.rs
static/: index.html
tests/: color_escape_test.rs
wiki/: bt-clewdr.md  clewdr-vertex.md  database.md  hf-space.md  vertex.md  vertex_zh.md
