[package]
name = "clewdr"
version = "0.10.9"
edition = "2024"
authors = ["Xerxes-2"]

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }
wreq = { version = "5", features = [
    "json",
    "stream",
    "multipart",
    "socks",
    "cookies",
    "charset",
] }
wreq-util = "2"
serde_json = "1"
const_format = { version = "0.2", features = ["fmt"] }
serde = { version = "1", features = ["derive"] }
colored = "3"
axum = { version = "0.8", features = ["json", "tracing", "tokio", "macros"] }
regex = "1"
tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
rand = "0.9"
chrono = "0.4"
futures = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
itertools = "0.14"
toml = "0.9"
eventsource-stream = "0.2"
enable-ansi-support = "0.2"
tracing-appender = "0.2"
self-replace = "1"
zip = "4"
tempfile = "3"
axum-auth = "0.8"
tiktoken-rs = "0.7"
passwords = "3"
tower-http = { version = "0.6", features = [
    "compression-zstd",
    "cors",
    "fs",
    "trace",
] }
figment = { version = "0.10", features = ["env", "json", "toml"] }
arc-swap = "1"
include_dir = "0.7"
tower-serve-static = "0.1"
url = { version = "2", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
moka = { version = "0.12", features = ["sync"] }
tower = "0.5"
bytes = "1"
trie-rs = "0.4"
async-stream = "0.3"
struct_iterable = "0.1"
console-subscriber = "0.4"
yup-oauth2 = "12"
hyper-util = "0.1"
hyper-http-proxy = "1"
http = "1"
snafu = { version = "0.8", features = ["futures", "rust_1_81"] }
serde_with = { version = "3", features = ["chrono_0_4"] }
mimalloc = "0.1"
oauth2 = { version = "5", default-features = false }


[features]
no_fs = []
